doctest 0.5.0-dev
=================

  * SKIP_IF and other conditional directives can include small single-line
    blocks of code.  For example:

      - "% doctest: +SKIP_IF(foo() && bar(42))"

  * Workaround regex bug on ARM architecture.



doctest 0.4.1 (2016-01-04)
==========================

  * Added conditional variants of SKIP and XFAIL directives to control test
    execution based on runtime conditions:

      - "% doctest: +SKIP_IF(condition)"
      - "% doctest: +SKIP_UNLESS(condition)"
      - "% doctest: +XFAIL_IF(condition)"
      - "% doctest: +XFAIL_UNLESS(condition)"

  * Added constants DOCTEST_OCTAVE and DOCTEST_MATLAB that can be used as
    conditions in SKIP_IF etc.

  * Improved handling of example code in TexInfo documentation.

      - Added support for @print{} macros, which may be used for output that
        is not part of a returned value.

      - Examples without ">>" markers use code indentation together with
        @result{} / @print{} macros to classify input and output lines in a
        natural way.  It is no longer necessary to split code into several
        @example / @group blocks.

      - Allow arbitrary TexInfo macros.  The documentation is interpreted
        by makeinfo before running the code examples.

      - Fixed handling of TexInfo files with Windows line endings.

  * Improved folder/directory traversals:

      - Ignore hidden (dot) directories.

      - Ignore files that are neither m-files nor texinfo.



doctest 0.4.0 (2015-07-02)
==========================

  * Change doctest interface to be closer to Octave's test function.

  * Change wildcard string from '***' to '...'.

  * Doctests can be influenced with directives:

      - mark tests to be skipped by appending "% doctest: +SKIP".

      - mark tests expected to fail with "% doctest: +XFAIL".

      - stricter whitespace matching: "% doctest: -NORMALIZE_WHITESPACE".

      - disable "..." wildcard matching with "% doctest: -ELLIPSIS".
